src/test/deca/context/valid/ContextSansObjet/OperationsArithmetiques/MinusIntFloat.deca
//Description :
//	Vérification contextuelle de l'opérateur - avec des variables int et float
//
//Résultats :
//	ok

{
    float x = 1-1.0;
    int y = 3;
    float z = y-x;
}